Initial commit of docker-Java-kubernetes-project